set(PLUGIN_NAME protocol_lws_login)
set(requirements 1)
require_lws_config(LWS_WITHOUT_SERVER 0 requirements)
require_lws_config(LWS_WITH_JOSE 1 requirements)
require_lws_config(LWS_ROLE_H1 1 requirements)
require_lws_config(LWS_WITH_STRUCT_SQLITE3 1 requirements)

if (requirements)
	create_plugin(${PLUGIN_NAME} "" "protocol_lws_login.c" "" "")
	if (NOT LWS_WITH_PLUGINS_BUILTIN)
		target_compile_definitions(${PLUGIN_NAME} PRIVATE LWS_BUILDING_SHARED)
	endif()

	if (NOT WIN32 AND LWS_WITH_PLUGINS AND NOT LWS_WITH_PLUGINS_BUILTIN)
		install(DIRECTORY login-assets DESTINATION share/libwebsockets-test-server/lws-login COMPONENT plugins)
	endif()
endif()
